--- a/todo.txt
+++ b/todo.txt
@@ -24,62 +24,76 @@ STEPS :
 
 
 
+//___________ tutorial way__________
+// import "leaflet/dist/leaflet.css";
+// import L, { marker } from "leaflet";
+
+// import landMarker from "../assets/images/icon-location.svg";
+// import { MapContainer, TileLayer } from "react-leaflet";
+
+
+
+
+
+// const Map = ({ coordinates }) => {
+//   const marker = new L.icon({ iconUrl: landMarker });
+//   let state = {
+//     keyMap: Math.random(),
+//   };
+
+//   return (
+//     <MapContainer
+//       key={state.keyMap}
+//       center={[coordinates.latitude, coordinates.longitude]}
+//       zoom={18}
+//       className="w-full h-3/5 z-0"
+//     >
+//       <TileLayer
+//         attribution="Google Maps"
+//         url="https//google.cn/map/vt?lyrs=m@189&gl=cn&x={x}&y={y}&z={z}"
+//       >
+//         <marker
+//           position={[coordinates.lat, coordinates.lng]}
+//           icon={marker}
+//         ></marker>
+//       </TileLayer>
+//     </MapContainer>
+//   );
+// };
+
+// export default Map;
+
  
 
 
+// import { useEffect } from "react";
+// import locationIcon from "../assets/images/icon-location.svg";
+// import L from "leaflet";
+// import "leaflet/dist/leaflet.css";
+
+// function MapComponent({ coordinates }) {
+//   useEffect(() => {
+//     console.log("Coordinates prop in MapComponent: ", coordinates);
+
+//     if (coordinates.latitude && coordinates.longitude) {
+//       const map = L.map("map").setView([coordinates.latitude, coordinates.longitude], 13);
+
+//       L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+//         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+//       }).addTo(map);
+
+//       const markerIcon = L.icon({
+//         iconUrl: locationIcon,
+//         iconSize: [46, 56],
+//         iconAnchor: [23, 55],
+//       });
+
+//       L.marker([coordinates.latitude, coordinates.longitude], { icon: markerIcon }).addTo(map);
+//     }
+//   }, [coordinates]);
+
+//   return <div id="map" style={{ height: "400px" }} className="map-container"></div>;
+// }
  
-import React, { Component } from 'react';
-import ReactDOM from 'react-dom';
-import { Map, TileLayer, Marker, Popup } from 'react-leaflet';
-import './styles.css';
-
-class App extends Component {
-  state = {
-    center: [51.505, -0.091],
-    zoom: 13,
-  };
-
-  render() {
-    return (
-      <div>
-        <Map center={this.state.center} zoom={this.state.zoom}>
-          <TileLayer
-            attribution='&amp;copy <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-            url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
-          />
-          <Marker position={this.state.center}>
-            <Popup>
-              A pretty CSS3 popup. <br /> Easily customizable.
-            </Popup>
-          </Marker>
-        </Map>
-      </div>
-    );
-  }
-}
-
-
-const map = () =>{
-let state = {
-    center: [51.505, -0.091],
-    zoom: 13,
-  };
-
-   return (
-      <div>
-        <Map center={this.state.center} zoom={this.state.zoom}>
-          <TileLayer
-            attribution='&amp;copy <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-            url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
-          />
-          <Marker position={this.state.center}>
-            <Popup>
-              A pretty CSS3 popup. <br /> Easily customizable.
-            </Popup>
-          </Marker>
-        </Map>
-      </div>
-    );
-}
-
+ 
 
